--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@evolu/common": "6.0.1-preview.19",
     "@evolu/react": "9.0.1-preview.4",
     "@evolu/react-web": "1.0.1-preview.3",
+    "@tailwindcss/vite": "^4.1.13",
     "kysely": "^0.28.5",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
